--- a/manual/migration.html
+++ b/manual/migration.html
@@ -100,97 +100,97 @@
     <a class="nav-link" href="installation.html">Installation</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="architecture.html">Architecture</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="api.html">API</a>
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="config-intro.html">Configuration</a>
+    <a class="nav-link" href="implementation.html">Implementation</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="configuration.html">Configuration file</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+    <a class="nav-link" href="architecture.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="appenders.html">Appenders</a>
+    <a class="nav-link" href="config-intro.html">Configuration</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="configuration.html">Configuration file</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="appenders.html">Appenders</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/file.html">File appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/rolling-file.html">Rolling file appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/database.html">Database appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/network.html">Network Appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/message-queue.html">Message queue appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/delegating.html">Delegating Appenders</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="layouts.html">Layouts</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="json-template-layout.html">JSON Template Layout</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="pattern-layout.html">Pattern Layout</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="lookups.html">Lookups</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="filters.html">Filters</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="scripts.html">Scripts</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="jmx.html">JMX</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="extending.html">Extending</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="plugins.html">Plugins</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="performance.html">Performance</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="async.html">Asynchronous loggers</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="garbagefree.html">Garbage-free logging</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item is-current-page" data-depth="1">
-    <a class="nav-link" href="migration.html">Migrating from Log4j 2</a>
+</ul>
   </li>
 </ul>
   </li>
@@ -232,16 +232,16 @@
   </li>
   <li class="nav-item" data-depth="0">
     <button class="nav-item-toggle"></button>
-    <span class="nav-text">Components</span>
+    <a class="nav-link" href="../components.html">Components</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-flume-ng.html">Flume Appender</a>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-docker.html">Log4j Docker Support</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../log4j-spring-cloud-config-client.html">Log4j Spring Cloud Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-jul.html">Log4j JDK Logging Adapter</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-to-jul.html">Log4j to JUL Adapter</a>
   </li>
 </ul>
   </li>
@@ -285,7 +285,6 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Home</a></li>
-    <li><a href="index.html">Manual</a></li>
     <li><a href="migration.html">Migrating from Log4j 2</a></li>
   </ul>
 </nav>
@@ -374,12 +373,12 @@ This change has the following advantages:</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders.html#BlockingQueueFactory" class="xref page">Asynchronous appender: JCTools-based queue</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jctools"><code>log4j-jctools</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/delegating.html#BlockingQueueFactory" class="xref page">Asynchronous appender: JCTools-based queue</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jctools" class="xref page"><code>log4j-jctools</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="async.html" class="xref page">Asynchronous logger</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-async-logger"><code>log4j-async-logger</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-async-logger" class="xref page"><code>log4j-async-logger</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/appenders.html#CassandraAppender">Cassandra appender</a></p></td>
@@ -392,15 +391,15 @@ This change has the following advantages:</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="configuration.html#configuration-with-properties" class="xref page">Configuration file: Java properties format</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-config-properties"><code>log4j-config-properties</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-config-properties" class="xref page"><code>log4j-config-properties</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="configuration.html#configuration-with-yaml" class="xref page">Configuration file: YAML format</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-config-yaml"><code>log4j-config-yaml</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-config-yaml" class="xref page"><code>log4j-config-yaml</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="layouts.html#CSVLayouts" class="xref page">CSV layouts</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-csv"><code>log4j-csv</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-csv" class="xref page"><code>log4j-csv</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/layouts.html#GELFLayout">GELF layout</a></p></td>
@@ -411,16 +410,16 @@ and the included
 template</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders.html#JDBCAppender" class="xref page">JDBC appender</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jdbc"><code>log4j-jdbc</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/database.html#JdbcAppender" class="xref page">JDBC appender</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jdbc" class="xref page"><code>log4j-jdbc</code></a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders.html#JDBCPoolingDriver" class="xref page">JDBC appender: DBCP 2 connection source</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jdbc-dbcp2"><code>log4j-jdbc-dbcp2</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/database.html#PoolingDriverConnectionSource" class="xref page">JDBC appender: DBCP 2 connection source</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jdbc-dbcp2" class="xref page"><code>log4j-jdbc-dbcp2</code></a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders.html#JDBCDataSource" class="xref page">JDBC appender: JNDI connection source</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jndi"><code>log4j-jndi</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/database.html#DataSourceConnectionSource" class="xref page">JDBC appender: JNDI connection source</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jndi" class="xref page"><code>log4j-jndi</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/appenders.html#JeroMQAppender">JeroMQ appender</a></p></td>
@@ -434,7 +433,7 @@ module</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="lookups.html#JndiLookup" class="xref page">JNDI lookup</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jndi"><code>log4j-jndi</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jndi" class="xref page"><code>log4j-jndi</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/appenders.html#JPAAppender">JPA appender</a></p></td>
@@ -456,7 +455,7 @@ module</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="scripts.html" class="xref page">Scripting support</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-script"><code>log4j-script</code></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-script" class="xref page"><code>log4j-script</code></a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/webapp.html">Servlet application support: Java EE version</a></p></td>
