--- a/manual/pattern-layout.html
+++ b/manual/pattern-layout.html
@@ -100,97 +100,97 @@
     <a class="nav-link" href="installation.html">Installation</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="architecture.html">Architecture</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="api.html">API</a>
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="config-intro.html">Configuration</a>
+    <a class="nav-link" href="implementation.html">Implementation</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="configuration.html">Configuration file</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+    <a class="nav-link" href="architecture.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="appenders.html">Appenders</a>
+    <a class="nav-link" href="config-intro.html">Configuration</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="configuration.html">Configuration file</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="appenders.html">Appenders</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/file.html">File appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/rolling-file.html">Rolling file appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/database.html">Database appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/network.html">Network Appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/message-queue.html">Message queue appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/delegating.html">Delegating Appenders</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="layouts.html">Layouts</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="json-template-layout.html">JSON Template Layout</a>
   </li>
-  <li class="nav-item is-current-page" data-depth="3">
+  <li class="nav-item is-current-page" data-depth="4">
     <a class="nav-link" href="pattern-layout.html">Pattern Layout</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="lookups.html">Lookups</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="filters.html">Filters</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="scripts.html">Scripts</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="jmx.html">JMX</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="extending.html">Extending</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="plugins.html">Plugins</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="performance.html">Performance</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="async.html">Asynchronous loggers</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="garbagefree.html">Garbage-free logging</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="migration.html">Migrating from Log4j 2</a>
+</ul>
   </li>
 </ul>
   </li>
@@ -232,16 +232,16 @@
   </li>
   <li class="nav-item" data-depth="0">
     <button class="nav-item-toggle"></button>
-    <span class="nav-text">Components</span>
+    <a class="nav-link" href="../components.html">Components</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-flume-ng.html">Flume Appender</a>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-docker.html">Log4j Docker Support</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../log4j-spring-cloud-config-client.html">Log4j Spring Cloud Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-jul.html">Log4j JDK Logging Adapter</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-to-jul.html">Log4j to JUL Adapter</a>
   </li>
 </ul>
   </li>
@@ -286,6 +286,7 @@
   <ul>
     <li><a href="../index.html">Home</a></li>
     <li><a href="index.html">Manual</a></li>
+    <li><a href="implementation.html">Implementation</a></li>
     <li><a href="config-intro.html">Configuration</a></li>
     <li><a href="layouts.html">Layouts</a></li>
     <li><a href="pattern-layout.html">Pattern Layout</a></li>
@@ -1127,7 +1128,7 @@ formats are supported.
 Only timestamps in the formats mentioned in the table above may use the <em>nano-of-second</em> pattern letter <code>n</code> instead of the <em>fraction-of-second</em> pattern letter <code>S</code>.</p>
 </div>
 <div class="paragraph">
-<p>Users may revert to a millisecond-precision clock when running on Java 9 by setting <a href="systemproperties.html#log4j2.clock" class="xref page">the <code>log4j2.clock</code> system property</a> to <code>SystemMillisClock</code>.</p>
+<p>Users may revert to a millisecond-precision clock when running on Java 9 by setting <a href="systemproperties.html#log4j.configuration.clock" class="xref page">the <code>log4j.configuration.clock</code> system property</a> to <code>SystemMillisClock</code>.</p>
 </div>
 <div class="admonitionblock warning">
 <table>
@@ -2228,7 +2229,7 @@ uuid{RANDOM|TIME}</code></pre>
 <div class="paragraph">
 <p>The time-based UUID is a Type 1 UUID generated using the MAC address of each host
 To ensure uniqueness across multiple JVMs and/or class loaders on the same host, a random number between 0 and 16,384 will be associated with each instance of the UUID generator class, and included in each time-based UUID generated.
-See also <a href="systemproperties.html#log4j2.uuidSequence" class="xref page"><code>log4j2.uuidSequence</code></a>.
+See also <a href="systemproperties.html#log4j.uuid.sequence" class="xref page"><code>log4j.uuid.sequence</code></a>.
 Because time-based UUIDs contain the MAC address and timestamp, they should be used with care.</p>
 </div>
 </div>
@@ -2545,7 +2546,7 @@ characters, then truncate from the end.</p></td>
 <p>ANSI escape sequences are supported natively on many platforms, but not by default on Windows.
 To enable ANSI support add the
 <a href="http://fusesource.github.io/jansi/">Jansi</a>
-dependency to your application, and set <a href="systemproperties.html#log4j2.skipJansi" class="xref page">the <code>log4j2.skipJansi</code> system property</a> to <code>false</code>.
+dependency to your application, and set <a href="systemproperties.html#log4j.console.jansiEnabled" class="xref page">the <code>log4j.console.jansiEnabled</code> system property</a> to <code>true</code>.
 This allows Log4j to use Jansi to add ANSI escape codes when writing to the console.</p>
 </div>
 <div class="admonitionblock note">
@@ -2686,7 +2687,7 @@ Format modifiers to control such things as field width, padding, left, and right
 <td class="tableblock halign-left valign-top" style="background-color: white;"></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><code><a href="#converter-thread-context-map[%X{key">,key2&#8230;&#8203;\</a>}<br>
+<td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><code><a href="#converter-thread-context-map">%X{key,,key2&#8230;&#8203;\</a>}<br>
 %mdc{key[,key2&#8230;&#8203;\]}<br>
 %MDC{key[,key2&#8230;&#8203;\]}]</code></p></td>
 <td class="tableblock halign-left valign-top" style="background-color: white;"></td>
@@ -2763,7 +2764,7 @@ Format modifiers to control such things as field width, padding, left, and right
 <td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><a href="#converter-map">Map</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><a href="lookups.html#marker-lookup" class="xref page">Marker Lookup</a></p></td>
+<td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><a href="lookups.html#MarkerLookup" class="xref page">Marker Lookup</a></p></td>
 <td class="tableblock halign-left valign-top" style="background-color: white;"><p class="tableblock"><a href="#converter-marker">Marker</a></p></td>
 </tr>
 </tbody>
@@ -2872,7 +2873,7 @@ To get the most out of it, mind the following checklist:</p>
 <p>Mind <a href="#garbage-free">the garbage footprint of features you use</a></p>
 </li>
 <li>
-<p>Don&#8217;t give too much slack to <a href="systemproperties.html#log4j2.layoutStringBuilderMaxSize" class="xref page"><code>log4j2.layoutStringBuilderMaxSize</code></a> and try to keep it relatively tight</p>
+<p>Don&#8217;t give too much slack to <a href="systemproperties.html#log4j.gc.layoutStringBuilderMaxSize" class="xref page"><code>log4j.gc.layoutStringBuilderMaxSize</code></a> and try to keep it relatively tight</p>
 </li>
 </ul>
 </div>
