--- a/manual/json-template-layout.html
+++ b/manual/json-template-layout.html
@@ -100,97 +100,97 @@
     <a class="nav-link" href="installation.html">Installation</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="architecture.html">Architecture</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="api.html">API</a>
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="config-intro.html">Configuration</a>
+    <a class="nav-link" href="implementation.html">Implementation</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="configuration.html">Configuration file</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+    <a class="nav-link" href="architecture.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="appenders.html">Appenders</a>
+    <a class="nav-link" href="config-intro.html">Configuration</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="configuration.html">Configuration file</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="systemproperties.html">Configuration properties</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="customconfig.html">Programmatic Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="appenders.html">Appenders</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/file.html">File appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/rolling-file.html">Rolling file appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/database.html">Database appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/network.html">Network Appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/message-queue.html">Message queue appenders</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="appenders/delegating.html">Delegating Appenders</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="layouts.html">Layouts</a>
 <ul class="nav-list">
-  <li class="nav-item is-current-page" data-depth="3">
+  <li class="nav-item is-current-page" data-depth="4">
     <a class="nav-link" href="json-template-layout.html">JSON Template Layout</a>
   </li>
-  <li class="nav-item" data-depth="3">
+  <li class="nav-item" data-depth="4">
     <a class="nav-link" href="pattern-layout.html">Pattern Layout</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="lookups.html">Lookups</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="filters.html">Filters</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="scripts.html">Scripts</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="jmx.html">JMX</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="extending.html">Extending</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="plugins.html">Plugins</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="performance.html">Performance</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="async.html">Asynchronous loggers</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="garbagefree.html">Garbage-free logging</a>
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="migration.html">Migrating from Log4j 2</a>
+</ul>
   </li>
 </ul>
   </li>
@@ -232,16 +232,16 @@
   </li>
   <li class="nav-item" data-depth="0">
     <button class="nav-item-toggle"></button>
-    <span class="nav-text">Components</span>
+    <a class="nav-link" href="../components.html">Components</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-flume-ng.html">Flume Appender</a>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-docker.html">Log4j Docker Support</a>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../log4j-spring-cloud-config-client.html">Log4j Spring Cloud Configuration</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-jul.html">Log4j JDK Logging Adapter</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../log4j-to-jul.html">Log4j to JUL Adapter</a>
   </li>
 </ul>
   </li>
@@ -286,6 +286,7 @@
   <ul>
     <li><a href="../index.html">Home</a></li>
     <li><a href="index.html">Manual</a></li>
+    <li><a href="implementation.html">Implementation</a></li>
     <li><a href="config-intro.html">Configuration</a></li>
     <li><a href="layouts.html">Layouts</a></li>
     <li><a href="json-template-layout.html">JSON Template Layout</a></li>
@@ -358,55 +359,30 @@ While running tests or developing locally, you can use <a href="pattern-layout.h
 </ul>
 </div>
 <div id="_tabs_1_maven--panel" class="tabpanel" aria-labelledby="_tabs_1_maven">
+<div class="paragraph">
+<p>We assume you use <a href="../components.html#log4j-bom" class="xref page"><code>log4j-bom</code></a> for dependency management.</p>
+</div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;project&gt;
-
-  &lt;!-- Assuming `log4j-bom` is imported --&gt;<i class="conum" data-value="1"></i><b>(1)</b>
-
-  &lt;dependency&gt;
-
-    &lt;dependency&gt;
-      &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
-      &lt;artifactId&gt;log4j-layout-template-json&lt;/artifactId&gt;
-      &lt;scope&gt;runtime&lt;/scope&gt;<i class="conum" data-value="2"></i><b>(2)</b>
-    &lt;/dependency&gt;
-
-  &lt;/dependency&gt;
-
-&lt;/project&gt;</code></pre>
+<pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;dependency&gt;
+  &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
+  &lt;artifactId&gt;log4j-json-template-layout&lt;/artifactId&gt;
+  &lt;scope&gt;runtime&lt;/scope&gt;
+&lt;/dependency&gt;</code></pre>
 </div>
 </div>
 </div>
 <div id="_tabs_1_gradle--panel" class="tabpanel" aria-labelledby="_tabs_1_gradle">
+<div class="paragraph">
+<p>We assume you use <a href="../components.html#log4j-bom" class="xref page"><code>log4j-bom</code></a> for dependency management.</p>
+</div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">dependencies {
-
-  // Assuming `log4j-bom` is imported <i class="conum" data-value="1"></i><b>(1)</b>
-
-  runtimeOnly <i class="conum" data-value="2"></i><b>(2)</b>
-    'org.apache.logging.log4j:log4j-slf4j2-impl'
-
-}</code></pre>
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">runtimeOnly 'org.apache.logging.log4j:log4j-json-template-layout'</code></pre>
 </div>
 </div>
 </div>
 </div>
-</div>
-<div class="colist arabic">
-<table>
-<tr>
-<td><i class="conum" data-value="1"></i><b>1</b></td>
-<td>Assuming you <a href="installation.html#bom" class="xref page">imported <code>org.apache.logging.log4j:log4j-bom</code></a></td>
-</tr>
-<tr>
-<td><i class="conum" data-value="2"></i><b>2</b></td>
-<td>For applications, logging implementation dependencies are required at <em>runtime</em>.
-If you want to use JSON Template Layout for tests, you need to switch the scope to <em>test</em>.
-See <a href="installation.html" class="xref page">Installation</a> for details.</td>
-</tr>
-</table>
 </div>
 <div class="paragraph">
 <p>JSON Template Layout is primarily configured through an <strong>event template</strong> describing the structure log events should be JSON-encoded in.
@@ -1758,7 +1734,7 @@ severity-field = "field" -&gt; ( "keyword" | "code" )</code></pre>
 <div class="sect4">
 <h5 id="event-template-resolver-main"><a class="anchor" href="#event-template-resolver-main"></a><code>main</code></h5>
 <div class="paragraph">
-<p>Performs <a href="lookups.html#AppMainArgsLookup" class="xref page">Main Argument Lookup</a> for the given <code>index</code> or <code>key</code></p>
+<p>Performs <a href="lookups.html#MainMapLookup" class="xref page">Main Argument Lookup</a> for the given <code>index</code> or <code>key</code></p>
 </div>
 <div class="listingblock">
 <div class="title"><code>main</code> event template resolver grammar</div>
@@ -2646,7 +2622,7 @@ The stack trace template used by these event template resolvers to encode <code>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#event-template-resolver-caseConverter"><code>caseConverter</code></a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="lookups.html#AppMainArgsLookup" class="xref page">Main Arguments Lookup</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="lookups.html#MainMapLookup" class="xref page">Main Arguments Lookup</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#event-template-resolver-main"><code>main</code></a></p></td>
 </tr>
 <tr>
@@ -2654,7 +2630,7 @@ The stack trace template used by these event template resolvers to encode <code>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#event-template-resolver-map"><code>map</code></a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="lookups.html#marker-lookup" class="xref page">Marker Lookup</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="lookups.html#MarkerLookup" class="xref page">Marker Lookup</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#event-template-resolver-marker"><code>marker</code></a></p></td>
 </tr>
 <tr>
